Sat Sep 13 10:05:57 1997  Scott Christley  <scottc@net-community.com>

	* The GNU tools for building a DLL on Windows only allow functions
	and not data to be exported; therefore, all global variables were
	moved into a separate file, externs.m, and added to the import
	library for the DLL so that those variables would be accessible
	outside of the DLL.
	* configure.in (PIPE): Make the -pipe a configure option.
	(DLLTOOL): Add support for building DLLs.
	(disable-static): New configure option to disable the building
	of the static library when building a shared library.
	(pcthread, pthread, m): Add checks for pcthread and math libraries.
	(sys/stat.h, sys/vfs.h, sys/statfs.h, statvfs): Add checks
	for filesystem related headers and functions.
	(getcwd): Remove duplicate check.
	* src/win32-entry.c: Rename to win32-entry.m
	* src/externs.m: New file.
	* src/libgnustep-base.def: New file.
	* src/Connection.m: Move all global variables to externs.m.
	* src/NSArchive.m: Likewise.
	* src/NSBundle.m: Likewise.
	Comment out code that would not compile on WIN32.
	* src/NSException.m: Likewise.
	(dealloc): Release instance variables.
	* src/NSFileManager.m: Likewise.
	Add WIN32 specific code.
	* src/NSHashTable.m: Likewise.
	* src/NSMapTable.m: Likewise.
	* src/NSThread.m: Likewise.
 	(-init): Set the thread data first.
	* src/NSUserDefaults.m: Likewise.
	* src/Stream.m: Likewise.
	* src/TcpPort.m: Likewise.
	* src/o_cbs_char_p.m: Likewise.
	* src/o_cbs_id.m: Likewise.
	* src/o_cbs_int.m: Likewise.
	* src/o_cbs_int_p.m: Likewise.
	* src/o_cbs_void_p.m: Likewise.

	* checks/Makefile.in: Do not link with math library.
	* checks/NSData-test.m: Correct directory for include files.
	* checks/diningPhilosophers.m (WIN32): Check different macro.
	* checks/nsattributedstring.m (main): New function.
	* checks/nsbundle.m: Do not include for MINGW32.

	* src/Makefile.in: Add support for building a DLL.  Break
	out the single install target into multiple targets.
